--- a/test/index.html
+++ b/test/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
   </head>
   <body>
+    <canvas width="512" height="512" id="cv"></canvas>
     <script src="./test.ts"></script>
   </body>
 </html>
